--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "dependencies": {
     "cordova-android": "^7.1.4",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-device-motion": "^2.0.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
@@ -51,10 +53,12 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-camera": {},
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device-motion": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
